# libldap--

./: CMakeLists.txt  Doxyfile  Makefile.am  autogen.sh  configure.ac  connection.cc  entry.cc  exceptions.cc  ldap++.h  ldap_compat.cc  ldap_compat.h  result.cc  searchable_vector_test.cc
debian/: changelog  control  copyright  rules
